# turing-owlNew

./: .gitignore  .turing-owl.yml  .turing-owlignore  README.md  debug_agent1.py  debug_agent2.py  drizzle.config.js.map  drizzle.config.ts  pyproject.toml  turing-owl.yaml  vite.config.js  vite.config.js.map  vite.config.ts
.github/workflows/: security.yml  turing-owl.yml
attached_assets/: Pasted-AGENTIC-AI-CODE-SECURITY-PLATFORM-Core-System-Architect_1764940607940.txt
backend/: cli.py  main.py
backend/agents/: agent1_parser.py  agent2_rules.py  agent2_semantic.py  agent2_semantic_ast.py  agent3a_validator.py  agent3b_AI.py  agent4_report.py  semantic_sequence_engine.py
backend/cloud/: runner.py
backend/core/: ast_matcher.py  config.py  context.py  dedupe.py  exit_codes.py  finding_id.py  function_summaries.py  git.py  ignore.py  limits.py  orchestrator.py  repo_fetcher.py  rule_cache.py  rule_validator.py  stats.py  timeout.py
backend/rules/: loader.py
client/: index.html
client/src/: App.d.ts.map  App.js  App.js.map  App.tsx  index.css
cloud/: runner.py  upload.py
cloud/auth/: token.py
cloud/github/: upload.py
script/: build.js  build.js.map
server_DEPRECATED/: index.js  index.js.map  index.ts  orchestrator.d.ts  orchestrator.d.ts.map  orchestrator.js  orchestrator.js.map  orchestrator.ts  routes.d.ts.map  routes.js  routes.js.map  routes.ts  static.js  static.js.map  storage.d.ts  storage.d.ts.map  storage.js  storage.js.map  storage.ts  vite.js  vite.js.map
shared/: schema.js  schema.js.map  schema.ts
test_project/: nano.py  secret_test.py
(+186 files in other folders)
