[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "turing-owl"
version = "2.4.0"
description = "Agentic AI source code vulnerability scanner (Semgrep-style)"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"

authors = [
    { name = "Pragna", email = "pragna@example.com" }
]

dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.6.0",
    "python-dotenv>=1.0.1",
    "httpx>=0.27.0",
    "rich>=13.7.0",
    "pyyaml>=6.0.1",
    "gitpython>=3.1.43",
    "tree-sitter>=0.21.3",
    "jinja2>=3.1.3",
    "orjson>=3.9.15"
]

[project.optional-dependencies]
dev = [
    "black>=24.2.0",
    "ruff>=0.3.5",
    "mypy>=1.9.0",
    "pytest>=8.1.1",
    "pytest-cov>=5.0.0"
]

[project.scripts]
turing-owl = "backend.cli:main"

[tool.setuptools]
packages = ["backend"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
select = ["E", "F", "B", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = ["tests"]
